# chess-rs

./: .gitignore  Cargo.toml  index.html
.cargo/: config.toml
src/: main.rs
src/chess/: board.rs  evaluation.rs  mod.rs  move.rs  negamax.rs  ordering.rs  transposition.rs  vector.rs  visualizer.rs  zobrist.rs
