[package]
name = "chess-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.9.1"
eframe = "0.31.1"
egui = "0.31.1"
egui_extras = { version = "0.31.1", features = ["image", "all_loaders"] }
eyre = "0.6.12"
hashbrown = "0.15.4"
itertools = "0.14.0"
ordered-float = "5.0.0"
rand = "0.9.0"
rand_chacha = "0.9.0"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
rayon = "1.10.0"
log = "0.4.27"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"

[profile.dev]
opt-level = 3 # TODO: temporary fix for release not printing to stdout

[[bin]]
name = "run_ui"
